@@ -331,7 +331,7 @@ public class Vala.Method : Member {
 	 *
 	 * @return the name to be used in C code
 	 */
-	public string get_real_cname () {
+	public virtual string get_real_cname () {
 		if (base_method != null || base_interface_method != null) {
 			return "%s_real_%s".printf (parent_symbol.get_lower_case_cname (null), name);
 		} else {
